# Business-Verifier

./: .gitignore  ARCHITECTURE.md  CONSOLIDATED_PROJECT_DOCS.md  PRESENTATION.md  README.md  docker-compose.yml  echo_test.txt  package-lock.json  render.yaml  test_bug.py  test_bug_original.py  test_output.txt  test_results.txt  test_wikipedia.txt  void del_end.cpp
.gitnexus/: lbug  lbug.wal
ai_system_manager_service/: README.md  app.py  pyproject.toml
ai_system_manager_service/src/ai_system_manager/: crew.py
ai_system_manager_service/src/ai_system_manager/config/: agents.yaml  tasks.yaml
backend/: .env.example  .gitignore  Procfile  Procfile.test  README.md  analysis_output.txt  automations.py  backend_log.txt  business_verify.db  config.py  database.py  db_models.py  fine_tuning_export.py  fts_search.py  main.py  pdf_generator.py  pip_install_log.txt  requirements.txt  schemas.py  search_impact_analysis.py  seed.py  server_output.txt  simple_debug.py  startup_debug.py  tasks.py  test_fetchers.py  test_log.txt  test_results.txt  test_startup.py  utils.py  working_app.py  working_server.py
backend/agents/: __init__.py  ai_system_manager_client.py  config.py  crew.py  tools.py
backend/data_engine/: __init__.py  cache.py  engine.py  fetchers.py  main.py  milestones.py  models.py  student_score.py  summarizer.py  (+1 more)
dataconnect/: dataconnect.yaml  seed_data.gql
frontend/: .eslintrc.json  Dockerfile  STYLE_GUIDE.md  build_log.txt  frontend_server_log.txt  frontend_start_log.txt  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+67 files in other folders)
