[project]
name = "ai_system_manager"
version = "0.1.0"
description = "ai_system_manager using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.14.4",
    "exa-py",
]

[project.scripts]
ai_system_manager = "ai_system_manager.main:run"
run_crew = "ai_system_manager.main:run"
train = "ai_system_manager.main:train"
replay = "ai_system_manager.main:replay"
test = "ai_system_manager.main:test"
run_with_trigger = "ai_system_manager.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
